fixed cursor widths and invisible line breaks
The cursor previously had a nonzero width, which caused everything to the right to shift over by 1 pixel when the cursor blinked on. This is now fixed.

The line breaks used to be invisible (I think this was caused by the parent being a flexbox). This is now fixed.

--- a/stylesheets/cursors.css
+++ b/stylesheets/cursors.css
@@ -1,6 +1,7 @@
 .cursor {
 	position: relative;
-	width: 1px;
+	width: 0px;
+	margin-right: -2px;
 	height: 1em;
 	box-sizing: border-box;
 	border-right: 2px solid black;
